Java language: use add/getFirst()